--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 
 defaults: &defaults
   docker:
-    - image: cimg/go:1.16
+  - image: cimg:/go:1.16
   working_directory: /workspace
   environment:
     GOPATH: /
@@ -17,43 +17,44 @@ jobs:
     - checkout
     - restore_cache:
         keys:
-          - go-module-cache-v1-{{ checksum "/workspace/go.sum" }}
-          - go-module-cache-v1
+        - go-module-cache-v1-{{ checksum "/workspace/go.sum" }}
+        - go-module-cache-v1-
     - run: go mod download
     - save_cache:
         key: go-module-cache-v1-{{ checksum "/workspace/go.sum" }}
         paths:
-          - /pkg/mod/cache
+        - /pkg/mod/cache
     - save_cache:
         key: workspace-v1-{{ .Environment.CIRCLE_SHA1 }}
         paths:
-          - /workspace
+        - /workspace
 
   test:
     <<: *defaults
     steps:
     - restore_cache:
         keys:
-          - workspace-v1-{{ .Environment.CIRCLE_SHA1 }}
+        - workspace-v1-{{ .Environment.CIRCLE_SHA1 }}
     - restore_cache:
         keys:
-          - go-module-cache-v1-{{ checksum "/workspace/go.sum" }}
-          - go-module-cache-v1-
-     - restore_cache:
-         - go-build-cache-v1-{{ .Branch }}-{{ .Revision }}
-         - go-build-cache-v1-{{ .Branch }}
-         - go-build-cache-v1-
-     - run: go test -v ./...
-     - save_cache:
-         key: go-build-cache-v1-{{ .Branch }}-{{ .Revision }}
-         paths:
-           - /.cache/go-build
+        - go-module-cache-v1-{{ checksum "/workspace/go.sum" }}
+        - go-module-cache-v1-
+    - restore_cache:
+        keys:
+        - go-build-cache-v1-{{ .Branch }}-{{ .Revision }}
+        - go-build-cache-v1-{{ .Branch }}
+        - go-build-cache-v1
+    - run: go test -v ./...
+    - save_cache:
+        key: go-build-cache-v1-{{ .Branch }}-{{ .Revision }}
+        paths:
+        - /.cache/go-build
 
 workflows:
   version: 2
   test:
     jobs:
-      - setup-build
-      - test:
-          requires:
-            - setup-build
+    - setup-build
+    - test:
+        requires:
+        - setup-build
