--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 defaults: &defaults
   docker:
   - image: cimg/go:1.16
-  working_directory: /workspace
+  working_directory: /
   environment:
     GOPATH: /
     GOCACHE: /.cache/go-build
